--- a/index.html
+++ b/index.html
@@ -54,45 +54,42 @@
       </p>
     </header>
     <main class="content">
-      <section class="content__section odd">
+      <section class="content__section">
         <h2 class="content__title decorated-text">
           Почему сосредоточиться так сложно
         </h2>
-        <div class="content__list">
-          <article class="content__subsection">
-            <h3 class="content__subtitle title-decor">Многозадачность</h3>
-            <p class="content__text">
-              Особенно сложно сосредоточиться, когда задач много и все они —
-              важные. Где же легендарная многозадачность, когда она так нужна
-              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи
-              <a
-                href="https://dana.org/article/multicosts-of-multitasking/"
-                target="_blank"
-                class="content__link"
-                >выяснили</a
-              >
-              что мозгу тяжело концентрироваться даже на двух делах
-              одновременно. А когда в поле внимания попадает несколько важных
-              задач, организм паникует и выделяет кортизол и адреналин —
-              «гормоны стресса». Из-за этого мы работаем невнимательно:
-              ошибаемся и быстро устаём.
-            </p>
-          </article>
-          <article class="content__subsection">
-            <h3 class="content__subtitle title-decor">Дофамин</h3>
-            <p class="content__text">
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
-              нашей невозможности сосредоточиться замешана и полная
-              противоположность стрессу — дофамин. Это вещество участвует в
-              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
-              от важной задачи на что-то более «приятное» для мозгов. Например,
-              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
-              чувствуем удовольствие. Получается замкнутый круг: чем больше
-              отвлекаешься, тем больше удовольствия получаешь.
-            </p>
-          </article>
-        </div>
+        <article class="content__subsection">
+          <h3 class="content__subtitle title-decor">Многозадачность</h3>
+          <p class="content__text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи
+            <a
+              href="https://dana.org/article/multicosts-of-multitasking/"
+              target="_blank"
+              class="content__link"
+              >выяснили</a
+            >
+            что мозгу тяжело концентрироваться даже на двух делах одновременно.
+            А когда в поле внимания попадает несколько важных задач, организм
+            паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
+            этого мы работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
+        </article>
+        <article class="content__subsection">
+          <h3 class="content__subtitle title-decor">Дофамин</h3>
+          <p class="content__text">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </article>
       </section>
       <section class="content__section even">
         <h2 class="content__title decorated-text">
@@ -133,13 +130,13 @@
           </p>
         </article>
       </section>
-      <section class="content__section odd">
+      <section class="content__section">
         <h2 class="content__title decorated-text">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <div class="content__list">
-          <h3 class="content__title content__list-title title-decor">
+          <h3 class="content__subtitle title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="content__subsection">
@@ -203,51 +200,39 @@
         </div>
       </section>
       <section class="content__section gallery">
-        <h2 class="content__title title-decor gallery__title">
+        <h2 class="content__title gallery__title title-decor">
           А можно в картинках?
         </h2>
-        <ul class="gallery__list">
-          <li class="gallery__list-item">
-            <img
-              src="./images/sunset.png"
-              alt="картинка заката"
-              loading="lazy"
-              class="gallery__list-image"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              src="./images/ice-cream.png"
-              alt="картинка мороженного с мультяшными мордочками"
-              loading="lazy"
-              class="gallery__list-image"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              src="./images/tape.png"
-              alt="картинка кассеты от магнитофона"
-              loading="lazy"
-              class="gallery__list-image"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              src="./images/books.png"
-              alt="картинка книжек в стопке"
-              loading="lazy"
-              class="gallery__list-image"
-            />
-          </li>
-          <li class="gallery__list-item">
-            <img
-              src="./images/street.png"
-              alt="картинка улицы"
-              loading="lazy"
-              class="gallery__list-image"
-            />
-          </li>
-        </ul>
+        <img
+          src="./images/sunset.png"
+          alt="картинка заката"
+          loading="lazy"
+          class="gallery__image"
+        />
+        <img
+          src="./images/ice-cream.png"
+          alt="картинка мороженного с мультяшными мордочками"
+          loading="lazy"
+          class="gallery__image"
+        />
+        <img
+          src="./images/tape.png"
+          alt="картинка кассеты от магнитофона"
+          loading="lazy"
+          class="gallery__image"
+        />
+        <img
+          src="./images/books.png"
+          alt="картинка книжек в стопке"
+          loading="lazy"
+          class="gallery__image"
+        />
+        <img
+          src="./images/street.png"
+          alt="картинка улицы"
+          loading="lazy"
+          class="gallery__image"
+        />
       </section>
     </main>
     <footer class="footer frames main-meaning">
