--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
+          </article>
         </div>
       </section>
       <section class="content__section">
